services/pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  # annotations:
  #   cert-manager.io/cluster-issuer: "selfsigned-issuer" #"letsencrypt-staging"

spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - ${URL_PIHOLE}
  #   secretName: ${PIHOLE_SECRET_NAME}
  rules:
  - host: ${URL_PIHOLE}
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
